--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-node_modules
+node_modules/
+
+.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
+npm-debig.log*
+yarn-debug.log*
+yarn-error.log*
+
